tests/support/validation/invalid/route_without_pattern/route.rte
RTE;   04;   04;Regular   ; 0;Bus       ; 0